# workout

./: .gitignore  Cargo.toml  NOTES.md  README.md  index.html  paces.toml
sample/: 2Q.output  2Q.workouts  2Q_plus.workouts
src/: JD_grammar.lalrpop  config.rs  crc16.rs  egui.rs  gui.rs  jd_grammar.lalrpop  lib.rs  main.rs  parse.rs  utils.rs  wtree.rs
src/fit/: archive.rs  crc16.rs
src/fit/fit_examples/: 6BQL3806.FIT  6BQL3806.txt
tests/: cli.rs  paces.toml
