[package]
name = "workout"
version = "0.5.0"
authors = ["Bernhard Leiner <bleiner@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = {version = "4.0", features = ["derive"]}
serde =  {version = "1.0", features = ["derive"]}
log = "0.4"
env_logger = "0.10"
byteorder = "1.4"
nom = "7.1"
approx = "0.5"
toml = "0.5"
once_cell = "1.17"

# wasm dependencies
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.4"

# dependencies for CLI integration tests
assert_cmd = "2.0.11"

# dependencies for egui
eframe = "0.21.3"
