[package]
name = "workout"
version = "0.6.0"
authors = ["Bernhard Leiner <bleiner@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = {version = "4.0", features = ["derive"]}
serde =  {version = "1.0", features = ["derive"]}
log = "0.4"
env_logger = "0.11"
byteorder = "1.4"
nom = "7.1"
approx = "0.5"
toml = "0.8"
once_cell = "1.17"

# dependencies for CLI integration tests
assert_cmd = "2.0"

# wasm dependencies
wasm-bindgen = { version = "0.2", optional = true}
serde-wasm-bindgen = { version = "0.4", optional = true}

# optional dependencies for egui
eframe = { version = "0.26", default-feature = false, features = ["wgpu"], optional = true }

[features]
default = ["egui"]
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]
egui = ["dep:eframe"]
