[package]
name = "workout"
version = "0.6.0"
authors = ["Bernhard Leiner <bleiner@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
byteorder = "1.4"
approx = "0.5"
toml = "0.8"
once_cell = "1.17"
winnow = "0.6.18"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
eframe = { version = "0.26", optional = true }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
assert_cmd = "2.0"
eframe = { version = "0.28", optional = true, features = ["wgpu"] }


[features]
default = ["egui"]
egui = ["dep:eframe"]
